# beyond-demographics

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.cpu.txt
experiments/annotator-id-attributes-test/: id-attr-test-compute_metrics.sh  llama3_classification-id+textual-diaz-instance-lr3e5.json  llama3_classification-id+textual-diaz-instance-lr3e5.metrics-train.csv  llama3_classification-id+textual-diaz-instance-lr3e5.results.csv  llama3_classification-id+textual-diaz-instance-lr3e5.sbatch  llama3_classification-id+textual-diaz-user-lr3e5-missing-seed.sbatch  llama3_classification-id+textual-diaz-user-lr3e5.json  llama3_classification-id+textual-diaz-user-lr3e5.metrics-train.csv  llama3_classification-id+textual-diaz-user-lr3e5.results.csv  llama3_classification-id+textual-diaz-user-lr3e5.sbatch  llama3_classification-id+textual-dices-instance-lr6e5.json  llama3_classification-id+textual-dices-instance-lr6e5.metrics-train.csv  llama3_classification-id+textual-dices-instance-lr6e5.results.csv  llama3_classification-id+textual-dices-instance-lr6e5.sbatch  llama3_classification-id+textual-dices-user-lr3e5.json  llama3_classification-id+textual-dices-user-lr3e5.metrics-train.csv  llama3_classification-id+textual-dices-user-lr3e5.results.csv  llama3_classification-id+textual-dices-user-lr3e5.sbatch  (+27 more)
multi_annotator/: analyse.py  data.py  eval.py  finetune_cls.py  metrics.py  plot.py  preprocessing.py  prompting.py  utils.py
test/: test_data.py  test_metrics.py  test_prompting.py  test_tokenization.py  test_utils.py
(+1077 files in other folders)
