[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["multi_annotator"]

[project]
name = "multi_annotator"
version = "1.0.0"
authors = [
  { name="Matthias Orlikowski", email="matthias@orlikow.ski" },
  { name="Jiaxin Pei", email="pedropei@stanford.edu" }
]
description = "Code to run experiments with LLMs for annotator modelling using background information"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "transformers[sentencepiece]==4.48.0",
    "optimum==1.23.3",
    "protobuf==3.20.3",
    "peft==0.14.0",
    "datasets==2.16.1",
    "pandas==2.1.4",
    "fire==0.5.0",
    "ipykernel==6.28.0",
    "scikit-learn==1.3.2",
    "matplotlib==3.8.3",
    "seaborn==0.13.2"
]

[project.optional-dependencies]
gpu = [ 
        "torch==2.1.2",
        "accelerate==1.0.1",
        "bitsandbytes==0.43.0"
]
development=[
  "pytest==8.3.2"
]